# windows-actions-test

./: README.md  pyproject.toml
.github/workflows/: build.yaml
src/windows_actions_test/: __init__.py
